# numerical-methods-derivative-pricing

./: .gitignore  CONVERSATION_SUMMARY_DEC16.md  README.md  REORGANIZED_QUICK_START.md  REVIEW_FINDINGS.md  pyproject.toml  requirements.txt
archive/: FINAL_REORGANIZATION_COMPLETE.md  FINAL_SESSION_SUMMARY_ULTRATHINK.txt  INDEX.md  SUBMISSION_VENUE_MAPPING.md  _MD_AUDIT_AND_REORGANIZATION_PLAN.md
archive/_meta/: PROJECT_OVERVIEW.md
archive/icml2026_conformal/: ARCHIVED_README.md
archive/jmlr_unified/: FINAL_VENUE_DECISION.md  JOFE_TRANSFORMATION_GUIDE.md
assignments/: fd_american_option.py  fd_worst_of.py
docs/: PAPER_STRATEGY_TOPTIER.md  SIGKDD2026_ACCEPTED_PAPERS.md  factor_investing.md  methods_overview.md  ml_motivation.md  overview.md  portfolio_optimization.md  risk_management.md
docs/course/: assignment_solutions.md  final_exam_2024_solutions.md
notebooks/: factor_backtest.ipynb  test_ml_pipeline.py
quant/: __init__.py
quant-core/: Cargo.toml
quant-core/docs/: methods_overview.md
quant-core/src/: lib.rs
quant-core/src/optimizer/: black_litterman.rs  constrained.rs  cvar_opt.rs  factor_opt.rs  mean_variance.rs  mod.rs  multiperiod.rs  robust.rs
quant-core/src/risk/: covariance.rs  decomposition.rs  evt.rs  factor_model.rs  hrp.rs  mod.rs  shrinkage.rs  var.rs
quant/analytics/: metrics.py  (+1 more)
research/: ARCHIVED_PAPERS.md  DECISION_DASHBOARD.md  ELIMINATION_PLAN.md  JMLR_ROADMAP.md  KDD_IMPACT_ANALYSIS.md  LITERATURE_ANALYSIS.md  PAPER_ECOSYSTEM_CLARIFICATION.md  PROJECT_DETAILS.md  REORGANIZATION_EXECUTION_SUMMARY.md
tests/: test_import.py
(+380 files in other folders)
