[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "quant"
version = "0.1.0"
description = "Quantitative Finance Library - Portfolio Optimization & Risk Management"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "lightgbm>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "maturin>=1.0",
]
ml = [
    "arch>=5.0",  # For GARCH
]
data = [
    "FinanceDataReader",
    "requests",
]

[tool.maturin]
# Build quant_core as a separate module (not inside quant/)
# This allows: import quant_core  AND  from quant import ledoit_wolf
module-name = "quant_core"
manifest-path = "quant-core/Cargo.toml"
python-source = "."
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
